--- a/demo28/src/app/pages/dashboard/home/home.component.html
+++ b/demo28/src/app/pages/dashboard/home/home.component.html
@@ -31,7 +31,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" routerLink="/">Sign Out</a>
+                <a class="nav-link" routerLink="/" (click)="logout()">Sign Out</a>
               </li>
             </ul>
           </aside>
