--- a/demo28/src/app/pages/dashboard/shared/account-details-tab/account-details-tab.component.html
+++ b/demo28/src/app/pages/dashboard/shared/account-details-tab/account-details-tab.component.html
@@ -72,7 +72,10 @@
                     <div class="col-lg-6 col-sm-12">
                       <div class="form-group">
                         <label>Current Password (leave blank to leave unchanged)</label>
-                        <input type="password" formControlName="currentPassword" class="form-control">
+                        <input type="password" formControlName="currentPassword" class="form-control" (focus)="focusCurrentPw()">
+                      </div>
+                      <div class="alert alert-danger" *ngIf="errorMessage">
+                        {{errorMessage}}
                       </div>
                     </div>
                     <div class="col-lg-6 col-sm-12">
@@ -80,10 +83,10 @@
                         <label>New Password (leave blank to leave unchanged)</label>
                         <input type="password" formControlName="newPassword" class="form-control">
                       </div>
-                      <div class="alert alert-danger mt-1" *ngIf="changeProfileFormGroup.get('newPassword').invalid &&
+                      <div class="alert alert-danger" *ngIf="changeProfileFormGroup.get('newPassword').invalid &&
 	                        (changeProfileFormGroup.get('newPassword').dirty ||
                           changeProfileFormGroup.get('newPassword').touched)">
-                        <div *ngIf="changeProfileFormGroup.get('newPassword').errors['notblank']">
+                        <div *ngIf="changeProfileFormGroup.get('newPassword').errors['required']">
                           Password is required
                         </div>
                         <div *ngIf="changeProfileFormGroup.get('newPassword').errors['minlength']">
