--- a/demo28/src/app/pages/product/shared/info-tabs/info-tabs.component.html
+++ b/demo28/src/app/pages/product/shared/info-tabs/info-tabs.component.html
@@ -7,10 +7,8 @@
       </a>
       <ng-template ngbNavContent>
         <molla-accordion [adClass]="accordion.adClass">
-          <molla-card *ngFor="let card of accordion.cards; let isFirst = first"
-            [adClass]="accordion.cardAclass"
-            [title]="card.title"
-            [icon]="accordion.showIcon? card.icon : null" [show]="isFirst ? true : false">
+          <molla-card *ngFor="let card of accordion.cards; let isFirst = first" [adClass]="accordion.cardAclass"
+            [title]="card.title" [icon]="accordion.showIcon? card.icon : null" [show]="isFirst ? true : false">
             {{ card.body }}
           </molla-card>
         </molla-accordion>
@@ -28,90 +26,117 @@
       </ng-template>
     </li>
     <li ngbNavItem>
-      <a ngbNavLink>
+      <a ngbNavLink (click)="loadReviews()">
         Reviews ({{product.totalRating}})
       </a>
       <ng-template ngbNavContent>
         <div class="reviews">
           <h3>Reviews ({{ product.totalRating }})</h3>
-          <div class="review">
-            <div class="row no-gutters">
-              <div class="col-auto">
-                <h4><a href="javascript:;">Samanta J.</a></h4>
-                <div class="ratings-container">
-                  <div class="ratings">
-                    <div class="ratings-val" [style.width]="product.avgRating * 20 + '%'"></div>
-                    <span class="tooltip-text">{{ product.avgRating.toFixed(2) }}</span>
-                  </div>
-                </div>
-                <span class="review-date">6 days ago</span>
-              </div>
-              <div class="col">
-                <h4>Good, perfect size</h4>
-
-                <div class="review-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus cum dolores
-                    assumenda asperiores facilis porro reprehenderit animi culpa atque blanditiis
-                    commodi perspiciatis doloremque, possimus, explicabo, autem fugit beatae quae
-                    voluptas!</p>
-                </div>
-
-                <div class="review-action">
-                  <a href="javascript:;"><i class="icon-thumbs-up"></i>Helpful (2)</a>
-                  <a href="javascript:;"><i class="icon-thumbs-down"></i>Unhelpful (0)</a>
-                </div>
-              </div>
-            </div>
+          <div class="review" *ngIf="loadedReview">
+            <ng-container [ngTemplateOutlet]="reviewTemplate" [ngTemplateOutletContext]="{reviews : reviews}"
+              *ngIf="reviews">
+            </ng-container>
           </div>
         </div>
-        <div class="reply">
-          <div class="title-wrapper text-left">
-            <h3 class="title title-simple text-left text-normal">Add a Review
-            </h3>
-            <p>Your email address will not be published. Required fields are
-              marked *</p>
-          </div>
-          <div class="rating-form">
-            <label for="rating" class="text-dark">Your rating * </label>
-            <span class="rating-stars selected">
-              <a [class]="'star-' + num " href="javascript:;" (click)="setRating($event)"
-                *ngFor="let num of [1,2,3,4,5]">{{ num }}</a>
-            </span>
+        <ng-container *ngIf="authenService.isLoggedIn(); else haveToLogin">
+          <div class="reply">
+            <div class="title-wrapper text-left">
+              <h3 class="title title-simple text-left text-normal">Add a Review
+              </h3>
+            </div>
+            <div class="rating-form" style="margin-bottom: 0 !important;">
+              <label for="rating" class="text-dark">Your rating * </label>
+              <span class="rating-stars selected">
+                <a [class]="'star-' + num " href="javascript:;" (click)="setRating($event, num)"
+                  *ngFor="let num of [1,2,3,4,5]">{{ num }}
+                </a>
+              </span>
+              <div class="span">
+                <h6 class="ml-2 mt-1">
+                  {{ commentFormGroup.get('ratingStar').value != null ?
+                  getCommentTitle(commentFormGroup.get('ratingStar').value) : ""}}
+                </h6>
+              </div>
+            </div>
+            <div class="alert alert-danger mb-1" *ngIf="commentFormGroup.get('ratingStar').invalid &&
+                (commentFormGroup.get('ratingStar').dirty ||
+                commentFormGroup.get('ratingStar').touched)">
+              <div *ngIf="commentFormGroup.get('ratingStar').errors['required']">
+                Comment content is required
+              </div>
+            </div>
+            <form [formGroup]="commentFormGroup" (submit)="submitComment()">
+              <div class="row">
+                <div class="col-md-6">
+                  <input type="text" class="form-control" id="reply-name" name="reply-name" placeholder="Name *"
+                    formControlName="fullName" />
+                </div>
+                <div class="col-md-6">
+                  <input type="email" class="form-control" id="reply-email" name="reply-email" placeholder="Email *"
+                    formControlName="email" />
+                </div>
+              </div>
+              <textarea id="reply-message" cols="30" rows="6" class="form-control mb-2 border border-success"
+                placeholder="Comment *" formControlName="content">
+              </textarea>
+              <div class="alert alert-danger" *ngIf="commentFormGroup.get('content').invalid &&
+	                        (commentFormGroup.get('content').dirty ||
+                          commentFormGroup.get('content').touched)">
+                <div *ngIf="commentFormGroup.get('content').errors['required']">
+                  Comment content is required
+                </div>
+                <div *ngIf="commentFormGroup.get('content').errors['minlength']">
+                  Comment content must have at least 3 character
+                </div>
+                <div *ngIf="commentFormGroup.get('content').errors['maxlength']">
+                  Comment content must not exceed 300 characters
+                </div>
+              </div>
 
-            <select name="rating" id="rating" required="" style="display: 'none'">
-              <option value="">Rate…</option>
-              <option value="5">Perfect</option>
-              <option value="4">Good</option>
-              <option value="3">Average</option>
-              <option value="2">Not that bad</option>
-              <option value="1">Very poor</option>
-            </select>
+              <button type="submit" class="btn btn-primary" [disabled]="commentFormGroup.get('content').value == null">
+                Submit
+              </button>
+            </form>
           </div>
-          <form action="#">
-            <textarea id="reply-message" cols="30" rows="6" class="form-control mb-2" placeholder="Comment *"
-              required></textarea>
-            <div class="row">
-              <div class="col-md-6">
-                <input type="text" class="form-control" id="reply-name" name="reply-name" placeholder="Name *"
-                  required />
-              </div>
-              <div class="col-md-6">
-                <input type="email" class="form-control" id="reply-email" name="reply-email" placeholder="Email *"
-                  required />
-              </div>
-            </div>
-            <div class="form-checkbox d-flex align-items-start mb-2">
-              <input type="checkbox" class="custom-checkbox" id="signin-remember" name="signin-remember" />
-              <label class="form-control-label ml-3" for="signin-remember">
-                Save my name, email, and website in this browser for the
-                next time I comment.
-              </label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
+        </ng-container>
+        <ng-template #haveToLogin>
+          <h4>You have to log in to comment</h4>
+        </ng-template>
+
       </ng-template>
     </li>
   </ul>
   <div [ngbNavOutlet]="nav"></div>
 </div>
+
+<ng-template #reviewTemplate let-reviews="reviews">
+  <div class="row">
+    <ng-container *ngFor="let review of reviews">
+      <div class="col-6 no-gutters">
+        <div class="row">
+          <div class="col-auto">
+            <h4>
+              <img class="mx-auto rounded-circle border border-success"
+                style="width: 70px; height: 70px; object-fit: cover;"
+                [src]="review.imageUrl != null ? ACCOUNT_IMAGE_DIRECTORY + review.imageUrl : 'assets/images/no-image-user.png'"
+                alt="">
+            </h4>
+            <div class="ratings-container justify-content-center">
+              <div class="ratings">
+                <div class="ratings-val" [style.width]="review.rating * 20 + '%'"></div>
+                <span class="tooltip-text">{{ review.rating.toFixed(2) }}</span>
+              </div>
+            </div>
+            <div class="text-center">{{review.createdAt | date:'mediumDate'}}</div>
+          </div>
+          <div class="col">
+            <h4>{{review.fullName + ' - ' +getCommentTitle(review.rating)}}</h4>
+            <div class="review-content">
+              <p>{{review.content}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </ng-container>
+  </div>
+</ng-template>
